--- a/docs/v0.8-auth-rbac-smoke.md
+++ b/docs/v0.8-auth-rbac-smoke.md
@@ -31,6 +31,7 @@ export LEGATOR_OIDC_CLIENT_ID="legator-cli"
 legator logout
 legator login --api-url "$LEGATOR_API_URL"
 legator whoami
+legator whoami --json | jq .
 ```
 
 Expected:
@@ -43,6 +44,12 @@ Expected:
 ## Role matrix
 
 Repeat the login flow with each test user.
+
+Optional helper script (manual-assisted browser login per role):
+
+```bash
+./hack/v0.8-rbac-matrix.sh
+```
 
 ### Viewer
 
