feat(v0.8.0): add inventory sync freshness/staleness health metadata

--- a/docs/v0.8-inventory-sync-smoke.md
+++ b/docs/v0.8-inventory-sync-smoke.md
@@ -25,6 +25,7 @@ Expected:
 - `sync` object present
 - `sync.provider: "headscale"`
 - `sync.lastSuccess` populated after successful sync
+- `sync.stale: false` on healthy recent syncs
 - `sync.healthy: true`
 
 ---
