feat(v0.8.0): add inventory status command and JSON output mode

--- a/docs/v0.8-inventory-sync-smoke.md
+++ b/docs/v0.8-inventory-sync-smoke.md
@@ -34,12 +34,14 @@ Expected:
 
 ```bash
 legator inventory
+legator inventory status
+legator inventory status --json | jq .
 ```
 
 Expected output contains:
 - device list
 - `Sync status` block
-- provider/healthy/last sync fields
+- provider/healthy/stale/last sync fields
 
 Optional detail check:
 
