chore(release): finalize v0.9 signoff and changelog for GA tag

--- a/docs/v0.9-release-checklist.md
+++ b/docs/v0.9-release-checklist.md
@@ -36,6 +36,6 @@ This checklist covers release hardening/signoff for v0.9.0:
 
 ## Candidate signoff
 
-- **Decision:** CONDITIONAL SIGNOFF (release candidate ready)
+- **Decision:** FINAL SIGNOFF (GO)
 - **Date:** 2026-02-24
-- **Condition:** Await Keith explicit GO before final `v0.9.0` tag/publish step.
+- **Approver signal:** Keith explicit "go ahead" received in session; proceed with `v0.9.0` tag/publish.
