feat(jobs): add cancellation APIs with race-safe run state machine

--- a/docs/releases/v1.0.0-alpha.17.md
+++ b/docs/releases/v1.0.0-alpha.17.md
@@ -7,14 +7,20 @@ Release date: 2026-02-28
 ### 1) Scheduled Jobs: operational maturity pass
 - Added global run-history endpoint: `GET /api/v1/jobs/runs`
 - Added run-history filters:
-  - `status=running|success|failed`
+  - `status=pending|running|success|failed|canceled`
   - `probe_id=<id>`
   - `job_id=<id>`
   - `started_after=<RFC3339>`
   - `started_before=<RFC3339>`
   - `limit=<n>`
 - Added run summary counters in API responses:
-  - `failed_count`, `success_count`, `running_count`
+  - `failed_count`, `success_count`, `running_count`, `pending_count`, `canceled_count`
+- Added cancellation endpoints:
+  - `POST /api/v1/jobs/{id}/cancel`
+    - `200 OK` with `{ job_id, status, canceled_runs, already_terminal_runs }`
+  - `POST /api/v1/jobs/{id}/runs/{runId}/cancel`
+    - `200 OK` with `{ job_id, run }` when transition to `canceled` succeeds
+    - `409 invalid_transition` when the run is already terminal
 - Hardened scheduler state transitions for fanout/concurrency:
   - overlap guards for in-flight `(job,probe)` dispatches
   - safer completion/status handling under concurrent result arrival
